# pybrainyquote

./: README.md  README.rst  pybrainyquote.py  pyproject.toml  quotes.yaml
